# personal

./: .gitignore  README.md  index.html  sketch.js  sketch2.js  vehicle.js
astar/: cell.js  index.html  sketch.js
backgammon/: board.js  game.js  index.html  log.js  player.js  point.js  sketch.js
bio/: index.html
css/: sketch.css
curves/: curves.js  index.html  orbit.js  sketch.js
disc-golf/: README.md  package-lock.json  package.json  svelte.config.js
disc-golf/pipeline/: pyproject.toml
disc-golf/pipeline/dgdata/: __init__.py  cli.py  config.py  db.py  export.py  extract.py  parse.py  sources.py  transform.py
disc-golf/pipeline/sql/: schema.sql
disc-golf/pipeline/tests/: test_transform.py
double-pendulum/: index.html  pendulum.js  sketch.js
double_pendulum/: index.html  pendulum.js  sketch.js
evolutionary_rockets/: dna.js  index.html  population.js  rocket.js  sketch.js  vehicle.js
evolutionary_steering/: environment.js  index.html  sketch.js  vehicle.js
fields/: fields.js  index.html  particle.js  sketch.js
flocking/: boid.js  index.html  sketch.js
global_css/: main.css  slider_styling.css
l-systems/: index.html  sketch.js  system.js
lorenz/: curves.js  index.html  orbit.js  sketch.js
mandelbrot/: fractal.frag  fractal.vert  index.html  sketch.js
perlin/: index.html  particle.js  sketch.js
search/: cell.js  index.html  sketch.js
self_driving_car/: controls.js  index.html  main.js  network.js  path.js  playerCar.js  road.js  sensors.js  style.css  traffic.js  utils.js  vehicles.js  visualizer.js
snake/: food.js  index.html  (+2 more)
(+38 files in other folders)
